# poolAI

./: .gitignore  BUILD_LINUX.md  CHANGELOG.md  Cargo.toml  DUPLICATION_REPORT.md  FINAL_STRUCTURE_REPORT.md  LINUX_BUILD_INSTRUCTIONS.md  PLATFORM_COMPILATION.md  Pop_OS!.txt  README.md  STRUCTURE_COMPLIANCE_REPORT.md  STRUCTURE_REPORT.md  UPDATE_REPORT.md  VERSION.md  build.rs  catcodes.txt  cursor-sync.service  cursor.promt  errorfeedack.txt  errorfeedback.txt  poolAI_concept.txt  poolAI_concept_enhanced.md  rustbook_link.txt  uutils.txt
.cargo/: config.toml
admin/: mod.rs
ai-env/: pyvenv.cfg
ai-env/Scripts/: activate  activate.bat
book/: Book_for_do.odt  RUST Очима Хакера.odt  rustai_web.docx
cursor_codes/.cargo/: config.toml
cursor_codes/src/: main.rs
cursor_codes/src/admin/: admin_panel.rs
cursor_codes/src/core/: error.rs  lib.rs  mod.rs  state.rs  utils.rs
cursor_codes/src/libs/: file_mirror.rs  mod.rs
cursor_codes/src/monitoring/: alert.rs
cursor_codes/src/network/: mod.rs  network.rs  pool_cok.rs  smallworld.rs  tls.rs
cursor_codes/src/platform/: lmrouter.rs  soladdr.rs  unix.rs  windows.rs
cursor_codes/src/pool/: miner.rs  pool.rs
cursor_codes/src/raid/: Cargo.toml  config.rs  lib.rs  mod.rs  mount.rs  storage.rs
cursor_codes/src/runtime/: queue.rs  storage.rs
cursor_codes/src/tgbot/: lib.rs  mod.rs  tgbot.rs
cursor_codes/src/vm/: error.rs  mod.rs  pcie.rs  telegram.rs  tuning.rs  usb.rs  vm.rs
cursor_codes/src/workers/: workers.rs
src/: lib.rs  main.rs  version.rs
src/admin/: admin.rs  admin_panel.rs  admin_ui.rs  config_manager.rs  mod.rs  system_manager.rs
src/core/: config.rs  main.rs  mod.rs  model_interface.rs
src/libs/: file_mirror.rs  gpu.rs  lib_manager.rs  mod.rs  model.rs  tokenizer.rs  tuning.rs
src/monitoring/: logger.rs  metrics.rs  mod.rs  monitor.rs
src/network/: api.rs  bridges.rs  loadbalancer.rs  mod.rs
src/platform/: error.rs  lib.rs  linux.rs  mod.rs  model.rs
src/pool/: bridges.rs  home.rs  login.rs  mod.rs  playground.rs  pool_cok.rs  reward_system.rs
src/raid/: Cargo.toml  admin.rs  network.rs  smallworld.rs  worker.rs  worker_interface.rs
src/raid/src/: burstraid.rs  mod.rs  vm.rs
src/runtime/: cache.rs  instance.rs  mod.rs  scheduler.rs  worker.rs
src/tgbot/: Cargo.toml  bot.rs  mod.rs
src/tgbot/src/: commands.rs  handlers.rs  tgtoken.rs
src/ui/: components.rs  dashboard.rs  mod.rs
src/ui/styles/: mod.rs
src/vm/: device.rs  endorphin.rs  gpu.rs  mod.rs
src/workers/: mod.rs  task_distributor.rs  worker_manager.rs  worker_monitor.rs
