[package]
name = "poolai"
version = "0.2.0-beta.bolvanka_v1"
edition = "2021"
authors = ["Platinov <platinovubuntu@gmail.com>"]
description = "PoolAI - Система управления пулом майнинга с интеграцией генеративных моделей (Beta Bolvanka v1)"
license = "MIT"
repository = "https://github.com/platinoff/poolAI"
keywords = ["ai", "mining", "pool", "gpu", "machine-learning", "rust"]
categories = ["ai", "system", "web-programming"]

[dependencies]
# Core dependencies
cursor-core = { path = "./cursor-core" }
cursor-tgbot = { path = "./src/tgbot" }
cursor-raid = { path = "./src/raid" }

# Async runtime
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"

# Web framework
actix-web = { version = "4.4", optional = true }
actix-rt = "2.8"
rustls = "0.22"
tokio-rustls = "0.24"
rustls-pemfile = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }

# Concurrency
parking_lot = "0.12"
crossbeam = "0.8"

# Cryptography
sha2 = "0.10"
ring = "0.17"
hmac = "0.12"
pbkdf2 = "0.12"
aes-gcm = "0.10"
zeroize = { version = "1.3.0", optional = true }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4"] }
rand = "0.8"
lazy_static = "1.4"
toml = "0.8"

# Optional dependencies
clap = { version = "4.4", features = ["derive"], optional = true }
dialoguer = { version = "0.11", optional = true }
eframe = { version = "0.27", optional = true }
egui = { version = "0.27", optional = true }
prometheus = { version = "0.13", optional = true }
metrics = { version = "0.21", optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }

# Testing
mockall = { version = "0.11", optional = true }

# Network
native-tls = "0.2"
url = "2.4"
hex = "0.4"

# Authentication
jsonwebtoken = "9.1"

# Traits
async-trait = "0.1"

# Telegram bot
teloxide = { version = "0.12", features = ["macros"] }
dptree = "0.3"

# Machine learning
tch = "0.14.0"

# Terminal UI
crossterm = "0.26"

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
windows-service = { version = "0.6", optional = true }
winapi = { version = "0.3", features = ["winsvc"], optional = true }

[target.'cfg(unix)'.dependencies]
daemonize = "0.5"
libc = "0.2"
nix = { version = "0.26", optional = true }

# Features
[features]
test = ["mockall"]
default = ["web-ui"]
web-ui = ["actix-web", "reqwest/json"]
metrics = ["dep:prometheus", "dep:metrics"]
monitoring = ["metrics", "tracing"]
cli = ["clap", "dialoguer"]
gui = ["eframe", "egui"]
windows = ["windows-service", "winapi"]
unix = ["nix"]

# Development dependencies
[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8" 