[package]
name = "cursor-raid"
version = "0.1.0"
edition = "2021"
authors = ["Platinov <platinovubuntu@gmail.com>"]
description = "RAID functionality for the cursor_codes project"

[dependencies]
cursor-core = { path = "../../cursor-core" }

# Async runtime
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
tracing = { version = "0.1", optional = true }

# Concurrency
parking_lot = "0.12"
crossbeam = "0.8"

# Cryptography
sha2 = "0.10"
ring = "0.17"
hmac = "0.12"
pbkdf2 = "0.12"
aes-gcm = "0.10"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4"] }
rand = "0.8"
lazy_static = "1.4"
toml = "0.8"

# Network
url = "2.4"
hex = "0.4"

# Authentication
jsonwebtoken = "9.1"

# Traits
async-trait = "0.1"

# Testing
mockall = { version = "0.11", optional = true }

[features]
test = ["mockall"]
default = []
monitoring = ["tracing"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8" 